remove inaccurate duration

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
   <header>
     <h1>100Hz 纯音缓解晕车工具</h1>
-    <p><a href="https://www.jstage.jst.go.jp/article/ehpm/30/0/30_24-00247/_html/-char/en" target="_blank" rel="noopener noreferrer">科学研究表明</a>，乘车前，双耳暴漏在 100Hz, 60 - 65 dbA 的纯音环境下，持续 1 分钟以上可以有效缓解晕车症状（效果持续约 2 个小时）。点击按钮播放音频，立即体验！</p>
+    <p><a href="https://www.jstage.jst.go.jp/article/ehpm/30/0/30_24-00247/_html/-char/en" target="_blank" rel="noopener noreferrer">科学研究表明</a>，乘车前，双耳暴漏在 100Hz, 60 - 65 dbA 的纯音环境下，持续 1 分钟以上可以有效缓解晕车症状。点击按钮播放音频，立即体验！</p>
   </header>
   <nav>
     <a href="#play">播放工具</a>
